feat: :sparkles: add hero image, modify NavBar and add github icon and link un social media bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -64,6 +64,18 @@ body {
     z-index: -1;
 }
 
+#esfera3 {
+    top: 1800px;
+}
+
+#esfera4 {
+    top: 2850px;
+}
+
+.image-container-hero img {
+    border-radius: 100%;
+}
+
 .nav-bar {
     background-color: var(--nav-bg-color);
     z-index: 1;
